--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://www.freeiconspng.com/thumbs/fork-and-knife-png/food-delivery-19.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bashi's Kichen</title>
+    <title>Bhashi's Kichen</title>
   </head>
   <body>
     <div id="root"></div>
